--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "gn-api-sdk-node": "^3.0.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "mercadopago": "^2.9.0",
     "nestjs-telegraf": "^2.9.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
